my-apps/media/jellyfin/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: jellyfin

  annotations:
    io.cilium/lb-ipam-ips: 192.168.10.47
spec:
  type: LoadBalancer
  selector:
    app: jellyfin
  ports:
    - name: web
      port: 8096
      targetPort: http
    - name: metrics
      port: 9097
      targetPort: metrics
